# recipy-cli

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: labeler.yml  pr-labeler.yml  release-drafter.yml
.github/workflows/: pr-labeler.yml  release.yml
src/: cli.rs  init.rs  main.rs  parser.rs  writer.rs
